update versions of maven dependencies